# google-dl

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: HUB.md  development-plan.md  drive-download-api.md  oauth-browser-launch.md  phase-00-project-skeleton.md  phase-01-auth.md  phase-02-walker-download.md  phase-03-throttle-robustness.md  phase-04-filtering.md  phase-05-dry-run.md  phase-06-archival.md  phase-07-config.md  phase-08-reports.md  phase-09-shared-drives.md  phase-10-polish-resume.md  product-spec.md  python-clean-code.md
src/gdrive_dl/: __init__.py  archival.py  auth.py  checksums.py  cli.py  config.py  constants.py  downloader.py  exceptions.py  filters.py  manifest.py  report.py  runner.py  throttle.py  timestamps.py  walker.py
tests/: conftest.py  test_archival.py  test_auth.py  test_checksums.py  test_cli.py  test_config.py  test_constants.py  test_downloader.py  test_exceptions.py  test_filters.py  test_manifest.py  test_report.py  test_runner.py  test_shared_drives.py  test_throttle.py  test_timestamps.py  test_walker.py
